[tool.poetry]
name = "selfmailbot"
version = "2024.01.10"
description = ""
authors = ["Fedor Borshev <fedor@borshev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
python-telegram-bot = "^20.7"
celery = "^5.0"
flask = "^3"
sentry-sdk = "~1"
envparse = "~0.2.0"
pystmark = "~0.5.3"
peewee = "^3.17.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pytest-flask = "^1.3.0"
pytest-env = "^1.1.3"

