[tool.poetry]
authors = ["Fedor Borshev <fedor@borshev.com>"]
description = ""
name = "selfmailbot"
readme = "README.md"
version = "2024.01.10"

[tool.poetry.dependencies]
celery = "~5.3.6"
flask = {extras = ["async"], version = "^3.0.0"}
peewee = "~3.19.0"
pystmark = "~0.5.3"
python = "~3.12"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.7"
redis = "^5.0.1"
sentry-sdk = "~1"
uvicorn = "^0.41.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"
mypy = "^1.8.0"
ruff = "^0.5.0"
toml-sort = "^0.24.0"
watchdog = {extras = ["watchmedo"], version = "^6.0.0"}

[tool.ruff]
line-length = 160

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "A002",
    "A003",
    "ANN",
    "ARG",
    "COM812",
    "D",
    "D211",
    "D213",
    "EM101",
    "FA102",
    "ISC001",
    "N818",
    "PLR2004",
    "PLW1508",
    "PT",
    "S101",
    "S104",
    "S701",
]
select = ["ALL"]

[tool.ruff.per-file-ignores]
"tests/*.py" = [
    "ANN",
    "D",
    "PLR",
    "RET",
    "S",
]

[tool.tomlsort]
all = true
in_place = true
sort_first = ["tool.poetry"]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
